Ajustes na responsividade e desenv. das secoes de Sobre e Aprendizado

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
+  <!--Bunny Fonts-->
+  <link rel="preconnect" href="https://fonts.bunny.net">
+  <link href="https://fonts.bunny.net/css?family=cabin-sketch:700|clicker-script:400|kranky:400" rel="stylesheet" />
   <title>Nubia Carraro | Portfólio</title>
 </head>
 
